[package]
name = "rdla"
version = "0.2.8"
authors = ["Moritz Moeller <virtualritz@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
clap = { version = "2.33.1", features = ["yaml", "color"] }
error-chain = "0.12.2"
if_chain = "1.0.0"
indicatif = "0.15.0"
nalgebra = "0.21.0"
nsi = "0.5.1"
ply-rs = "0.1.2"
rstar = "0.8.0"
rand_distr = "0.2.2"
rand_xoshiro = "0.4.0"
rand = "0.7.3"
serde = "1.0.111"
serde_derive = "1.0.111"
toml = "0.5.6"
tobj = "2.0.2"
rpmalloc = "0.2.0"

[profile.release]
lto = "on"
opt-level = 3
panic = "unwind"
